@startuml der

'title GOT Database DER

center header
<font color=black size=18>GOT - Gestion Online de Tramites</font>
<font size=15>DataBase Model</font>
<font size=15></font>
endheader

center footer \n Copyright © 2019 Sistemas Activos srl. All rights reserved.

' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b><color:blue>x</color></b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' [#FFAACC]
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

' entities
'not_null[unique[username]] VARCHAR[32]
'not_null[password] VARCHAR[64]
'primary_key[ID]  VARCHAR2[1 BYTE]




'Tipo de Tramite
'     Campos Disponibles

'Pedido de Extracto
'    clienteId
'    Autorizados
'    CuentaCobro

'    Fecha Desde
'    Fecha Hasta
'    Cuenta

'Estados
'Alta
'Finalizado
'En Proceso

Table(Tramite, "<b>Tramite</b>\n(Tramite de un cliente)") {
primary_key(id:) <b><color:blue>long</color></b>
tipoTramite: <b><color:darkred>TipoTramite</color></b>
clienteId: Long
autorizados: List<<b><color:darkred>TramiteAutorizado</color></b>>
sectorInicio: <b><color:darkred>Sector</color></b>
sectorActual: <b><color:darkred>Sector</color></b>
detalle: List<<b><color:darkred>TramiteDetalle</color></b>>;
cuentaCobro: String
estado: <b><color:darkred>EstadoTramite</color></b>
fechaFinalizacion: Date
fechaInicio: Date
fechaVencimiento: Date
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(TramiteDetalle, "<b>TramiteDetalle</b>\n(Detalle de un tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
tramite: <b><color:darkred>Tramite</color></b>
campo: <b><color:darkred>TipoTramiteCampo</color></b>
valor: String
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(TipoTramite, "<b>TipoTramite</b>\n(Tipos de tramites)") {
primary_key(id:) <b><color:blue>long</color></b>
descripcion: String
cobraComision: Boolean
comision: <b><color:darkred>Comision</color></b>
requiereDocumentacion: Boolean
activo: Boolean
autorizado: Boolean
sectorInicial: <b><color:darkred>Sector</color></b>
campos: Array<<b><color:darkred>TipoTramiteCampo</color></b>>
horasResolucion: Long
horasVencimiento: Long
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(TipoTramiteCampo, "<b>TipoTramiteCampo</b>\n(Campos de un tipo de tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
tipoTramite: <b><color:darkred>TipoTramite</color></b>
campoDisponible: <b><color:darkred>CampoDisponible</color></b>
obligatorio: Boolean
activo: Boolean
nombre: String
leyenda: String
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(CampoDisponible, "<b>CampoDisponible</b>\n(Campos Disponibles)") {
primary_key(id:) <b><color:blue>long</color></b>
nombre: String
descripcion: String
tipoDato: String
activo: Boolean
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(TramiteAutorizado, "<b>TramiteAutorizado</b>\n(Personas autorizadas al tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
tramiteId: Long
autorizadoId: Long
usuAlta: String
fechaAlta: Date
}

Table(Autorizado, "<b>Autorizado</b>\n(Personas autorizadas al tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
clienteId: Long
tipoDocumento: String
nroDocumento: String
nombre: String
apellido: String
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(Sector, "<b>Sector</b>\n(Sector)") {
primary_key(id:) <b><color:blue>long</color></b>
canal: String
sector: String
descripcion: String
activo: boolean
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(Comision, "<b>Comision</b>\n(Comision del tipo de tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
param1: String
param2: String
param3: String
param4: String
param5: String
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

Table(EstadoTramite, "<b>EstadoTramite</b>\n(Estado de un tramite)") {
primary_key(id:) <b><color:blue>long</color></b>
code: String
descripcion: String
usuAlta: String
fechaAlta: Date
usuModif: String
fechaModif: Date
}

' relationships
' one-to-one relationship
'user -- user_profile : "A user only \nhas one profile"
' one to may relationship
'user --> session : "A user may have\n many sessions"
' many to many relationship
' Add mark if you like
'user "1" --> "*" user_group : "A user may be \nin many groups"
'group "1" --> "0..N" user_group : "A group may \ncontain many users"

Tramite "*" <-- "1" TipoTramite
Tramite "*" -- "1" Sector
Tramite "*" -- "1" EstadoTramite
Tramite "1" --> "*" TramiteDetalle
Tramite "1" --> "*" TramiteAutorizado
TramiteAutorizado "*" --> "1" Autorizado


TipoTramite "*" -- "1" Comision
TipoTramite "*" -- "1" Sector 
TipoTramite "1" --> "*" TipoTramiteCampo

TramiteDetalle "1" -- "1" TipoTramiteCampo

TipoTramiteCampo "*" -- "1" CampoDisponible
 



@enduml